[B]4.0.0~nightly3[/B]
- Fix Serienstream (Treffer bei Suche verbessert)

[B]4.0.0~nightly2[/B]
- Update Cinemaxx Caching 

[B]4.0.0~nighly1[/B]
- viele interne Änderungen um Wartungsarbeiten an Lastship zu vereinfachen.
- Logfix (meta.pop)
- Staffelbenennung auswählbar (Bibliothek und Download getrennt)
- neue Screenshots
- neues Icon
- Fix View Typ in movies.py
  Ansichten werden nun auch wieder auf den Folgeseiten korrekt angezeigt
- Autoplay-Qualität auswählbar
- ZDF-Scrapper Beta
  (nur Serien des letzen Jahres)
- Neues Justwatch Modul
- Hoffentlich vorerst endgültiger Fix für Netzkino und Netflix
- Watchbox Serien Defekt (momentan Kampagne TV Now)
- Fix Cloudflare
- Fix HdFilme.net
- Zufallswiedergabe wieder hinzugefügt (Userwunsch)
- Fix Suche für Netflix, Netzkino und Watchbox
  Die Suche hat bis jetzt nur den ersten treffer genommen.
- Fix Blacingfast
- Fix Cinemaxx.cc

[B]3.1.0[/B]
  25.03.2019
- Umstrukturierung whatsnew.txt (für Info-Popup)
- Fix Error durch Widget im Log
- höhere Treffergenauigkeit für Netflix, Netzkino und Watchbox
- Watchbox und Netzkino als Premium markiert
- weniger Seiten Anfragen dank Nutzung von Justwatch
- Info-Popup nach Update / Erstinstallation
- Watchbox Encoding Fix
- Gitignore sinnvoll erweitert
- Textanpassungen (Schreibweise, Sprachliches, Formatierung)
- Hinweis zur notwendigen erneuten Autorisierung von Trakt.tv hinzugefügt.
- thumbs.db entfernt
- Neu: Watchbox
- Fix SD-Autoplay Filter
- Doppelter Verfügbarkeits-Check für Netflix
- Kontextmenü-Einträge lassen sich nun unter Einstellungen/Allgemein verwalten
- Zufallswiedergabe entfernt
-  Fanart/Poster Quelle Auswahlmöglichkeit hinzugefügt (control.py, movies.py, lastship.py, metacache.py):
    Es ist bei Filmen nach der Suche möglich, über das Kontexmenü die Fanart/Poster Quelle zu ändern
    Ist bei der gewählten Quelle nichts verfügbar, so wird kein Icon angezeigt
- Fanart/Poster sind nun auswählbar in den Kategorien